---
source: tests/snapshots.rs
expression: html
---
<!DOCTYPE html>
<html lang="en" data-theme="blue">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Soffio</title>
    <meta name="description" content="Whispers on motion, balance, and form.">
    <meta property="og:title" content="Soffio">
    <meta property="og:description" content="Traces of motion, balance, and form in continual drift.">
    <meta property="og:type" content="website">
    <meta property="og:locale" content="en_US">
    <meta name="twitter:card" content="summary_large_image">
    <link rel="stylesheet" href="/static/common/tokens.css">
    <link rel="stylesheet" href="/static/public/app.css">
    
  <link rel="stylesheet" href="/static/public/styles/post.css">
  
  <link rel="stylesheet" href="/static/public/styles/code.css">
  

    <script type="module" src="/static/common/components.js" defer></script>
    <script type="module" src="/static/common/datastar-init.js" defer></script>
  </head>
  <body data-page="shell">
    
<page-shell data-structure="stack" role="document">
  <header data-role="banner">
  <header-bar data-layout="row" role="presentation">
    <h1 data-role="brand-title">
      <a data-role="brand" href="/">
        Soffio
      </a>
    </h1>
    <nav data-role="primary-nav" aria-label="Primary navigation">
      
      <a
        data-role="nav-link"
        href="/about"
        
        
      >
        About
      </a>
      
      <a
        data-role="nav-link"
        href="/systems-handbook"
        
        
      >
        Systems Handbook
      </a>
      
      <a
        data-role="nav-link"
        href="https://github.com/soffio"
        
        target="_blank"
        
        
        rel="noopener noreferrer"
        
      >
        GitHub
      </a>
      
      <a
        data-role="nav-link"
        href="https://soffio.dev/playbook"
        
        target="_blank"
        
        
        rel="noopener noreferrer"
        
      >
        Playbook
      </a>
      
    </nav>
  </header-bar>
</header>
  
<main data-role="content">
  <layout-frame data-layout="split" role="group" aria-label="Article layout">
    
    
    <meta-column data-region="meta" role="complementary" aria-label="Article metadata">
      <aside data-role="meta-card">
        <nav data-role="post-toc" role="navigation" aria-label="Table of contents">
  
  <ul data-role="toc-list" role="list">
    
      <li data-role="toc-item" data-level="1">
  <a data-role="toc-link" href="#overview">Overview</a>
  
</li>
    
      <li data-role="toc-item" data-level="1">
  <a data-role="toc-link" href="#architecture">Pipeline Architecture</a>
  
</li>
    
      <li data-role="toc-item" data-level="1">
  <a data-role="toc-link" href="#validation">Validation &#38; Observability</a>
  
  <ul data-role="toc-list" role="list">
    
      <li data-role="toc-item" data-level="2">
  <a data-role="toc-link" href="#next-steps">Next Steps</a>
  
</li>
    
  </ul>
  
</li>
    
  </ul>
  
</nav>
      </aside>
    </meta-column>
    
    <content-panel data-region="primary" role="region" aria-label="Article body">
      <post-card data-entry="incremental-build-pipeline" role="listitem" view-transition-name="post-card-incremental-build-pipeline">
        <article data-role="card" aria-labelledby="post-heading"><card-heading role="presentation">
  <h2 id="post-heading" data-role="card-title" view-transition-name="post-title-incremental-build-pipeline">
    <a data-role="card-link" href="/posts/incremental-build-pipeline">Incremental Build Pipeline in Rust</a>
  </h2>
</card-heading>
<card-excerpt view-transition-name="post-excerpt-incremental-build-pipeline">How we rebuilt Soffio&#39;s Rust workspace pipeline to deliver artifacts every five minutes without sacrificing determinism.</card-excerpt>
<card-footer role="contentinfo">
  <time data-role="published" datetime="2025-05-12" view-transition-name="post-date-incremental-build-pipeline">May 12, 2025</time>
  <tag-badges role="list" aria-label="Tags" view-transition-name="post-tags-incremental-build-pipeline">
    
    <a data-role="badge" role="listitem" href="/tags/engineering">#Engineering</a>
    
    <a data-role="badge" role="listitem" href="/tags/build">#Build</a>
    
  </tag-badges>
</card-footer>
          
          <section data-role="post-summary" aria-label="Key takeaways">
            <ul><li>Crate-level DAG scheduling slashes end-to-end build latency to under five minutes per change.</li><li>Remote fingerprints and targeted linting stop unnecessary workspace rebuilds.</li><li>Trace-enriched metadata lets engineers replay failures locally without waiting on CI.</li></ul>
          </section>
          
          
          <section id="overview" data-role="post-section" data-level="1">
  <h1>Overview</h1>
  <p>Soffio's legacy mono-build consumed an hour per change even when only a leaf crate changed. We replaced it with a directed acyclic graph generated from the workspace manifest, so each crate now advertises its edges explicitly.</p><p>Schedulers assign nodes to build agents based on cache affinity. Each node materialises a fingerprint derived from `Cargo.lock`, environment variables, and compiler flags, which keeps the graph deterministic across builds.</p>
  
</section>
          
          <section id="architecture" data-role="post-section" data-level="1">
  <h1>Pipeline Architecture</h1>
  <p>We expose the pipeline graph through a small Rust orchestrator. It inspects the workspace, computes the ready set, and only queues crates that need work. Everything else is a cache hit and exits early.</p><pre><code class="language-rust">fn enqueue(node: WorkspaceNode) {
    if cache.hit(&node.fingerprint) {
        return;
    }
    scheduler.spawn(node);
}</code></pre><p>Linkers, lints, and docs run in dedicated lanes. When a node builds successfully we broadcast its artifact location and fingerprint through Redis so dependent crates can resume without polling.</p>
  
</section>
          
          <section id="validation" data-role="post-section" data-level="1">
  <h1>Validation & Observability</h1>
  <ul><li>Integration tests publish per-crate timings to Prometheus, letting us compare hot spots between runs.</li><li>Every build stores its fingerprint metadata in S3, so rerunning `soffio-pipeline replay --build <id>` fully reconstructs the environment.</li></ul><p>Within two weeks p95 build time fell from 47 minutes to 4.8 minutes. More importantly, developers finally trust the cache because they can inspect when and why it missed.</p>
  
  <div data-role="post-subsections">
    
      <section id="next-steps" data-role="post-section" data-level="2">
  <h2>Next Steps</h2>
  <p>We are now targeting dependency-aware rollbacks and live dashboards showing which crates consume the cache budget.</p><ul><li>Integrate design-system change detection so doc builds remain optional when untouched.</li><li>Ship per-crate success dashboards for the release team, including alerts on cache eviction spikes.</li></ul>
  
</section>
    
  </div>
  
</section>
          
        </article>
      </post-card>
    </content-panel>
  </layout-frame>
</main>

  <footer data-role="footer">
  <footer-copy>Stillness guides the wind; the wind reshapes stillness.</footer-copy>
</footer>
</page-shell>

  </body>
</html>
